cambio en about

--- a/pages/about.html
+++ b/pages/about.html
@@ -55,12 +55,13 @@
     <!--MAIN CONTACTO-->
     <main>
       <section>
-        <div id="local" style="gap:2rem" class="border-top border-2 p-4 text-white">
+        <div id="local" style="gap: 3rem" class="border-top border-2 p-4 text-white">
             <div>
                 <div class="wrapper-local">
                     <h2>¿QUIENES SOMOS?</h2>
                     <p class="fs-5 text-white tracking-in-expand-fwd">
-                      Bienvenido a nuestro vivero TERRA GARDEN. Ubicado en Rosario, Santa Fe, Argentina, donde la pasión por las plantas se fusiona con un servicio excepcional. Nos enorgullece ser una empresa familiar, lo que significa que cada planta que cultivamos y cada cliente que atendemos es parte de nuestra extensa familia verde. Ubicados en un entorno privilegiado, ofrecemos un ingreso perfecto hacia un universo de variedad botánica. Desde exuberantes flores hasta robustos árboles, nuestro vivero es un refugio donde la naturaleza y la hospitalidad se entrelazan. Nos esforzamos por brindar no solo productos de calidad, sino también una experiencia en la que cada visita sea más que una transacción: es un encuentro con la vida y la vitalidad que solo la naturaleza puede ofrecer. ¡Únete a nosotros y descubre el encanto de nuestro vivero en el corazón de Rosario!.</p>
+                      Bienvenido a nuestro vivero TERRA GARDEN. Ubicado en Rosario, Santa Fe, Argentina, donde la pasión por las plantas se fusiona con un servicio excepcional. Nos enorgullece ser una empresa familiar, lo que significa que cada planta que cultivamos y cada cliente que atendemos es parte de nuestra extensa familia verde. Ubicados en un entorno privilegiado, ofrecemos un ingreso perfecto hacia un universo de variedad botánica. Desde exuberantes flores hasta robustos árboles, nuestro vivero es un refugio donde la naturaleza y la hospitalidad se entrelazan. Nos esforzamos por brindar no solo productos de calidad, sino también una experiencia en la que cada visita sea más que una transacción: es un encuentro con la vida y la vitalidad que solo la naturaleza puede ofrecer. ¡Únete a nosotros y descubre el encanto de nuestro vivero en el corazón de Rosario!
+                      En TERRA GARDEN, nos dedicamos a ofrecer a nuestros clientes no solo una amplia gama de plantas exquisitas, sino también un conocimiento apasionado sobre la jardinería. Nuestro equipo de expertos está siempre dispuesto a compartir consejos y orientación para ayudarte a cultivar y cuidar tus plantas de la mejor manera posible. Creemos que cada espacio, ya sea un pequeño balcón o un extenso jardín, tiene el potencial de convertirse en un oasis verde, y estamos aquí para ayudarte a hacer realidad esa visión.</p>
                 </div>
             </div>          
         <div class="text-center">
