Detalles en about y se agrego action al boton buscar

--- a/pages/about.html
+++ b/pages/about.html
@@ -39,7 +39,7 @@
                 <a class="nav-link active" aria-current="page href="about.html">Sobre Nosotros</a>
               </li>              
             </ul>
-            <form class="d-flex" role="search">
+            <form class="d-flex" role="search" action="./productos.html" method="get">
               <input class="form-control me-2" type="search" placeholder="Comienza a buscar..." aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Buscar</button>
             </form>
@@ -52,10 +52,10 @@
         <h1 class="mb-5 fs-2 border-3">Somos <span class="text-success">TERRA GARDEN</span>. Conocenos!</h1>   
     </section>
 
-    <!--MAIN CONTACTO-->
+    <!--MAIN Ab-->
     <main>
       <section>
-        <div id="local" style="gap: 3rem" class="border-top border-2 p-4 text-white">
+        <div id="local" class="border-top border-2 p-4 text-white">
             <div>
                 <div class="wrapper-local">
                     <h2>¿QUIENES SOMOS?</h2>
