--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -39,7 +39,7 @@
                 <a class="nav-link" href="about.html">Sobre Nosotros</a>
               </li>              
             </ul>
-            <form class="d-flex" role="search">
+            <form class="d-flex" role="search" action="./productos.html" method="get">
               <input class="form-control me-2" type="search" placeholder="Comienza a buscar..." aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Buscar</button>
             </form>
