--- a/pages/about.html
+++ b/pages/about.html
@@ -49,7 +49,7 @@
 
     <!--HERO-->
     <section class="w-50 mx-auto text-center pt-3" id="hero">
-        <h1 class="mb-5 fs-2 border-3">Somos <span class="text-success">TERRA GARDEN</span>. Conocenos!</h1>   
+        <h1 class="p-3 fs-2 border-3">Somos <span class="text-success">TERRA GARDEN</span>. Conocenos!</h1>   
     </section>
 
     <!--MAIN Ab-->
