cambio archivo index

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     </section>
 
     <!--Carrusel-->
+    <main>
     <div id="carousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">            
           <div class="carousel-item active" data-bs-interval="3000">
@@ -75,7 +76,7 @@
           <span class="visually-hidden">Siguiente</span>
         </button>
       </div>
-
+    </main>
 
      <!--Footer--> 
     <footer class="w-100  d-flex  align-items-center justify-content-center flex-wrap">
